# q-dev-sagemaker-bank-marketing-prediction

./: .gitignore  Dockerfile  JUPYTER_NOTEBOOK_FORMAT.md  README.md  SAGEMAKER_MIGRATION.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci_cd.yml
config/data/: default.yaml
config/model/: default.yaml
notebooks/: model_development.ipynb
scripts/: docker-entrypoint.sh  download_data.py  run_api.py
src/: pipeline.py
src/data/: data_processor.py
src/monitoring/: model_monitor.py
src/serving/: __init__.py  app.py  model_serving.py
src/training/: model_trainer.py
src/utils/: config.py  logger.py
tests/: test_data_processor.py  test_model_monitor.py  test_model_trainer.py
